...
            date: Date()
        )
        
        let message = presenter.makeResultMessage()
        
        let alertModel = AlertModel(
            identifier: "GameResult",
            title: "Раунд окончен!",
            message: message,
            buttonText: "Сыграть еще раз",
            
            completion: { [weak self] in
                self?.restartGame()
...
